# portfolio

./: .dockerignore  .gitignore  CHAT_WINDOW_IMPROVEMENTS.md  Dockerfile  INDEX_HTML_UPDATES.md  PROFESSIONALIZATION_SUMMARY.md  README.md  TRANSFORMATION_COMPLETE.md  UPDATE_COMPLETE.md  WEBSITE_UPDATES.md  app.py  app.yaml  bio.txt  chatbot.py  main.py  pyproject.toml  requirements.txt
db/: chroma.sqlite3
docs/: FREE_GEMINI_SETUP.md  GEMINI_MIGRATION.md  MODERNIZATION_SUMMARY.md  QUICKSTART.md  README_GEMINI.md  SETUP_VISUAL_GUIDE.txt
faiss_index/: index.faiss  index.pkl
static/: main.js  marked.min.js  style.css
static/bio/: bio.txt
templates/: index.html
